--- a/IapExample/android/app/src/main/res/values/strings.xml
+++ b/IapExample/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AppPurchases</string>
+    <string name="app_name">Guide for new iap</string>
 </resources>
